# LumiKB

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.e2e.yml  test_cookie_debug.py
backend/: Dockerfile  Dockerfile.api  Dockerfile.beat  Dockerfile.worker  alembic.ini  pyproject.toml  seed_e2e.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_audit_schema_and_role.py  003_add_kb_settings_and_outbox_aggregate_type.py  004_add_document_upload_fields.py  005_add_document_version_fields.py  24161041d664_add_tags_to_knowledge_bases.py  31eea0de45a7_add_observability_schema_with_.py  38f8bc466800_add_processing_step_tracking_to_.py  3c33e68b67e1_add_archived_at_to_knowledge_bases.py  44d340d9f6fc_add_tags_column_to_documents.py  46b7e5f40417_add_draft_model_with_status_enum_and_.py  5ef2580afdf9_add_permission_level_and_is_system_to_.py  664fb5501195_add_llm_models_table.py  7279836c14d9_add_onboarding_fields_to_users.py  9c4424c51c68_add_kb_access_log_table.py  b34da7e95f38_populate_kb_default_models.py  ca404d9346d2_add_archived_at_to_documents.py  cecccdf66df7_add_groups_and_user_groups_tables.py  e05dcbf6d840_add_system_config_table.py  e6cb38d97509_add_model_refs_to_knowledge_bases.py  f8a3d2e91b47_add_kb_group_permissions_table.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  chat.py  chat_stream.py  documents.py  drafts.py  generate.py  generate_stream.py  groups.py  health.py  knowledge_bases.py  metrics.py  models.py  observability.py  search.py  users.py
backend/app/core/: auth.py  config.py  database.py  kb_presets.py  logging.py  redis.py  users.py
backend/app/integrations/: litellm_callback.py  litellm_client.py  minio_client.py  qdrant_client.py
backend/app/middleware/: __init__.py  request_context.py
backend/app/models/: __init__.py  audit.py  base.py  config.py  document.py  draft.py  group.py  kb_access_log.py  kb_group_permission.py  knowledge_base.py  llm_model.py  observability.py  outbox.py  permission.py  user.py
backend/app/repositories/: audit_repo.py
backend/app/schemas/: __init__.py  admin.py  chat.py  citation.py  common.py  document.py  draft.py  generation.py  group.py  kb_recommendation.py  kb_settings.py  kb_stats.py  knowledge_base.py  llm_model.py  observability.py  permission.py  recent_kb.py  search.py  sse.py  user.py
backend/app/services/: __init__.py  admin_stats_service.py  audit_service.py  chunk_service.py  citation_service.py  config_service.py  conversation_service.py  document_service.py  draft_service.py  explanation_service.py  export_service.py  feedback_analytics_service.py  feedback_service.py  generation_service.py  group_service.py  kb_config_resolver.py  kb_recommendation_service.py  kb_service.py  kb_stats_service.py  langfuse_provider.py  litellm_proxy_service.py  metrics_aggregation_service.py  model_connection_tester.py  model_registry_service.py  observability_query_service.py  observability_service.py  permission_service.py  query_rewriter_service.py  queue_monitor_service.py  recent_kb_service.py  retention_service.py  search_audit_service.py  search_service.py  template_registry.py
backend/app/workers/: __init__.py  celery_app.py  chunking.py  docling_parser.py  document_tasks.py  embedding.py  indexing.py  metrics_aggregation_tasks.py  outbox_tasks.py  parsed_content_storage.py  parsing.py  retention_tasks.py
backend/tests/: README.md  conftest.py
backend/tests/factories/: __init__.py  admin_factory.py  conversation_factory.py  document_factory.py  draft_factory.py  feedback_factory.py  generation_factory.py  group_factory.py  kb_factory.py  observability_factory.py  user_factory.py
backend/tests/fixtures/: __init__.py  auth_fixtures.py  sample.md
backend/tests/helpers/: __init__.py  document_helpers.py  export_validation.py  qdrant_helpers.py
backend/tests/integration/: conftest.py  test_admin_route_protection.py  test_admin_stats_api.py  test_admin_users.py  test_archive_api.py  test_audit_api.py  test_audit_export_api.py  test_audit_logging.py  test_auth.py  test_chat_api.py  test_chat_clear_undo_workflow.py  test_chat_conversation.py  test_chat_sessions_api.py  test_chat_streaming.py  test_chat_trace_flow.py  test_chunk_api.py  test_chunking_embedding.py  test_citation_content_range.py  test_citation_security.py  test_clear_failed_api.py  test_confidence_scoring.py  test_config_api.py  test_conversation_management.py  test_cross_kb_search.py  test_database.py  test_debug_mode_flow.py  test_document_delete.py  test_document_export.py  test_document_lifecycle_api.py  test_document_list.py  test_document_processing.py  test_document_processing_timeout.py  test_document_reupload.py  test_document_status.py  test_document_tags.py  test_document_trace_flow.py  test_document_upload.py  test_draft_api.py  test_duplicate_detection_api.py  test_explain_api.py  (+49 more)
backend/tests/performance/: __init__.py  test_qdrant_load.py
backend/tests/unit/: conftest.py  test_admin_stats_service.py  test_archive_service.py  test_async_qdrant.py  test_audit_enums.py  test_audit_export.py  test_audit_logging.py  test_audit_service.py  test_audit_service_queries.py  test_auth_dependencies.py  test_chat_observability.py  test_chunk_service.py  test_chunking.py  test_citation_service.py  test_config_service.py  test_conversation_prompt_config.py  test_conversation_service.py  test_docling_parser.py  test_document_lifecycle.py  test_document_observability.py  test_document_service.py  test_document_tags.py  test_document_worker_kb_config.py  test_draft_service.py  test_embedding.py  test_explanation_service.py  test_export_service.py  test_feedback_analytics_service.py  test_feedback_service.py  test_generation_service.py  test_group_service.py  test_health.py  test_indexing.py  test_kb_archive_service.py  test_kb_config_resolver.py  test_kb_permissions.py  test_kb_presets.py  test_kb_recommendation_service.py  test_kb_schemas.py  test_kb_service.py  (+27 more)
docs/: 00-index.md  01-solution-idea.md  02-first-commend.md  (+42 more)
(+1184 files in other folders)
