[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumikb-backend"
version = "0.1.0"
description = "LumiKB Backend - Enterprise RAG-powered knowledge management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "LumiKB Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    # Logging
    "structlog>=25.5.0,<26.0.0",
    # Authentication
    "fastapi-users[sqlalchemy]>=14.0.0,<15.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    # Redis (sessions, rate limiting)
    "redis>=7.1.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # Test infrastructure
    "testcontainers[postgres,redis]>=4.0.0",
    "faker>=24.0.0",
    # Async test support for Celery tasks
    "nest_asyncio>=1.6.0",
]
all = [
    # Vector & LLM
    "langchain>=0.3.0,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-text-splitters>=0.3.0,<1.0.0",
    "langchain-qdrant>=0.1.0,<1.0.0",
    "qdrant-client>=1.10.0,<2.0.0",
    "litellm>=1.50.0,<2.0.0",
    "tiktoken>=0.8.0,<1.0.0",
    # Task Queue (redis dep already included above, don't use celery[redis] to avoid version conflict)
    "celery>=5.5.0,<6.0.0",
    # Document Processing - PDF, DOCX, Markdown parsing
    "unstructured[pdf,docx,md]>=0.16.0,<1.0.0",
    # Monitoring
    "prometheus-client>=0.21.0,<1.0.0",
    # Object Storage
    "boto3>=1.35.0",
    # Natural Language Processing (Story 3.9 - keyword stemming)
    "nltk>=3.8.0,<4.0.0",
    # Document Export (Story 4.7 - DOCX, PDF, Markdown)
    "python-docx>=1.1.0,<2.0.0",
    "reportlab>=4.0.0,<5.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "markdown>=3.5.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
# Test files: relax certain rules for common pytest patterns
# E402: Allow imports after pytestmark (pytest pattern)
# SIM117: Allow nested async with statements (session management)
# SIM105: Allow try-except-pass for cleanup (intentional error suppression)
# ARG001: Allow unused fixture arguments (fixtures used for side effects)
"tests/**/*.py" = ["E402", "SIM117", "SIM105", "ARG001"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not e2e' --strict-markers --timeout=90"
timeout_method = "thread"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # asyncpg connection cleanup during test teardown - harmless
    "ignore:coroutine 'Connection._cancel' was never awaited:RuntimeWarning",
    # LiteLLM async client cleanup during interpreter shutdown - harmless
    "ignore:There is no current event loop:RuntimeWarning",
    # Outbox async handlers during mock setup - harmless test artifact
    "ignore:coroutine '_handle_kb_delete' was never awaited:RuntimeWarning",
    "ignore:coroutine '_handle_document_reprocess' was never awaited:RuntimeWarning",
]
markers = [
    "unit: Fast tests without external dependencies (<5s each)",
    "integration: Tests requiring testcontainers (PostgreSQL, Redis)",
    "e2e: Full stack tests requiring docker-compose",
    "smoke: Critical path tests for quick validation",
    "slow: Tests taking >30s, excluded from default runs",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
